manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: final
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
  labels:
    app: django
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: django
    tier: backend
  type: ClusterIP
